# CSC-570-Smart-Venue-and-Event-Database-Management-System

./: README.md
Backend/: Dockerfile  MAPPING.md  Main.py  Makefile  PORTAL_ALIGNMENT.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tasks.ps1
Backend/app/: main.py
Backend/app/core/: config.py  dependencies.py  errors.py  logging.py  middleware.py  security.py
Backend/app/db/: mongo.py  sql.py
Backend/app/models/: enums.py
Backend/app/models/nosql/: __init__.py  crowd_event.py  crowd_threshold.py  feedback.py  incident_timeline.py  scan_log.py
Backend/app/models/sql/: user.py  (+10 more)
Backend/app/repositories/: attendee_repo.py  crowd_event_repo.py  crowd_threshold_repo.py  event_repo.py  incident_repo.py  incident_timeline_repo.py  payment_repo.py  reporting_repo.py  scan_log_repo.py  seating_repo.py  ticket_repo.py  user_repo.py  vendor_repo.py  vendor_sale_repo.py
Backend/app/routes/: auth.py  checkin.py  crowd.py  events.py  health.py  incidents.py  reports.py  tickets.py  vendor_sales.py  vendors.py
Backend/app/schemas/: attendee.py  auth.py  availability.py  checkin.py  crowd.py  event.py  feedback.py  incident.py  payment.py  reporting.py  seating.py  staff.py  ticket.py  vendor.py  venue.py
Backend/app/services/: auth_service.py  checkin_service.py  crowd_service.py  incident_service.py  qr_service.py  reporting_service.py  ticketing_service.py  vendor_service.py
Backend/migrations/: env.py
Backend/scripts/: seed.py  team_compat.sql  team_compat_drop.sql
Backend/tests/: conftest.py  test_auth.py  test_events.py  test_health.py
(+12 files in other folders)
