[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-event-backend"
version = "1.0.0"
description = "Backend for the Smart Event, Venue & Crowd Management System"
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["migrations", "venv", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # long lines handled by formatter
